[gd_scene load_steps=4 format=2]

[ext_resource path="res://misc/line-text-64.tres" type="DynamicFont" id=1]
[ext_resource path="res://Menus/Arcade/Scripts/Parts/Settings-Temp-Menu_Audio.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]

[node name="Menu_Audio_Settings" type="Node2D"]
script = ExtResource( 2 )

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_left = 40.0
margin_top = 270.0
margin_right = 1890.0
margin_bottom = 1045.0
border_color = Color( 1, 1, 1, 1 )
border_width = 3.0
editor_only = false

[node name="ReferenceRect_Yes" type="ReferenceRect" parent="."]
visible = false
margin_left = 730.0
margin_top = 890.0
margin_right = 875.0
margin_bottom = 960.0
border_color = Color( 1, 1, 1, 1 )
border_width = 4.0
editor_only = false

[node name="ReferenceRect_No" type="ReferenceRect" parent="."]
visible = false
margin_left = 900.0
margin_top = 890.0
margin_right = 1045.0
margin_bottom = 960.0
border_color = Color( 1, 1, 1, 1 )
border_width = 4.0
editor_only = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 80.0
margin_top = 320.0
margin_right = 749.0
margin_bottom = 675.0
rect_pivot_offset = Vector2( 1960, -90 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1776.0
margin_bottom = 67.0

[node name="Label_Master" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 245.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "Master:"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 249.0
margin_top = 26.0
margin_right = 301.0
margin_bottom = 40.0
text = "             "

[node name="Label_Master_Count" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 305.0
margin_right = 343.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "5"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 347.0
margin_top = 26.0
margin_right = 399.0
margin_bottom = 40.0
text = "             "

[node name="HSlider_Master" type="HSlider" parent="VBoxContainer/HBoxContainer"]
margin_left = 403.0
margin_right = 1776.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = SubResource( 1 )
min_value = -72.0
max_value = 0.0
step = 0.5
rounded = true

[node name="Label_02" type="Label" parent="VBoxContainer"]
margin_top = 71.0
margin_right = 1776.0
margin_bottom = 138.0
rect_pivot_offset = Vector2( 1960, -250 )
custom_fonts/font = ExtResource( 1 )
text = "                                                "

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 142.0
margin_right = 1776.0
margin_bottom = 209.0

[node name="Label_Music" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 183.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "Music:"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 187.0
margin_top = 26.0
margin_right = 239.0
margin_bottom = 40.0
text = "             "

[node name="Label_Music_Count" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 243.0
margin_right = 280.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "8"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 284.0
margin_top = 26.0
margin_right = 336.0
margin_bottom = 40.0
text = "             "

[node name="HSlider_Music" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
margin_left = 340.0
margin_right = 1776.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -72.0
max_value = 0.0
step = 0.5
rounded = true

[node name="Label_03" type="Label" parent="VBoxContainer"]
margin_top = 213.0
margin_right = 1776.0
margin_bottom = 280.0
rect_pivot_offset = Vector2( 1960, -250 )
custom_fonts/font = ExtResource( 1 )

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 284.0
margin_right = 1776.0
margin_bottom = 351.0

[node name="Label_Sfx" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_right = 127.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "SFX:"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 131.0
margin_top = 26.0
margin_right = 231.0
margin_bottom = 40.0
text = "                         "

[node name="Label_Sfx_count" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 235.0
margin_right = 273.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "2"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 277.0
margin_top = 26.0
margin_right = 329.0
margin_bottom = 40.0
text = "             "

[node name="HSlider_Sfx" type="HSlider" parent="VBoxContainer/HBoxContainer3"]
margin_left = 333.0
margin_right = 1776.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -72.0
max_value = 0.0
step = 0.5
rounded = true

[node name="Label_04" type="Label" parent="VBoxContainer"]
margin_top = 355.0
margin_right = 1776.0
margin_bottom = 422.0
rect_pivot_offset = Vector2( 1960, -250 )
custom_fonts/font = ExtResource( 1 )

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 426.0
margin_right = 1776.0
margin_bottom = 493.0

[node name="Label_Death_Minus" type="Label" parent="VBoxContainer/HBoxContainer5"]
margin_right = 667.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "Death Minus Point  "

[node name="Label_Death_Minus_Yes" type="Label" parent="VBoxContainer/HBoxContainer5"]
visible = false
margin_left = 671.0
margin_right = 784.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "Yes"

[node name="Label_Death_Minus_No" type="Label" parent="VBoxContainer/HBoxContainer5"]
margin_left = 671.0
margin_right = 745.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "No"

[node name="Label_05" type="Label" parent="VBoxContainer/HBoxContainer5"]
margin_left = 749.0
margin_right = 749.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 1960, -250 )
custom_fonts/font = ExtResource( 1 )

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 426.0
margin_right = 1776.0
margin_bottom = 493.0

[node name="Label_Start_Gun" type="Label" parent="VBoxContainer/HBoxContainer6"]
margin_right = 548.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "start with gun "

[node name="Label_Start_Gun_Yes" type="Label" parent="VBoxContainer/HBoxContainer6"]
visible = false
margin_left = 671.0
margin_right = 784.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "Yes"

[node name="Label_Start_Gun_No" type="Label" parent="VBoxContainer/HBoxContainer6"]
margin_left = 552.0
margin_right = 626.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "No"

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/HSlider_Master" to="." method="_on_HSlider_Stock_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/HSlider_Music" to="." method="_on_HSlider_Score_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer3/HSlider_Sfx" to="." method="_on_HSlider_Time_value_changed"]
